--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 body {
     font-family: 'Red Hat Display', sans-serif;
     min-height: 100vh;
-    background-image: url(pattern-background-desktop.svg);
+    background-image: url(<svg xmlns="http://www.w3.org/2000/svg" width="1440" height="437"><path fill="#D6E1FF" fill-rule="evenodd" d="M0 349.974c218.558 116.035 460.05 116.035 724.475 0s502.933-116.035 715.525 0V0H0v349.974z"/></svg>);
     background-repeat: no-repeat;
     background-size: contain;
     background-color: hsl(225, 100%, 94%);
